--- a/FlavorFiesta/package.json
+++ b/FlavorFiesta/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.9",
     "expo": "~50.0.3",
     "expo-status-bar": "~1.11.1",
@@ -17,9 +18,14 @@
     "react-icons": "^5.0.1",
     "react-native": "0.73.2",
     "react-native-heroicons": "^4.0.0",
+    "react-native-masonry-list": "^2.16.1",
+    "react-native-reanimated": "~3.6.0",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^14.1.0"
+    "react-native-svg": "^14.1.0",
+    "react-native-webview": "^13.6.4",
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
