--- a/FlavorFiesta/package.json
+++ b/FlavorFiesta/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "expo": "~50.0.3",
     "expo-status-bar": "~1.11.1",
+    "init": "^0.1.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-icons": "^5.0.1",
@@ -29,7 +31,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.4.1"
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
