--- a/FlavorFiesta/package.json
+++ b/FlavorFiesta/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.7",
     "expo": "~50.0.3",
     "expo-status-bar": "~1.11.1",
     "init": "^0.1.2",
