--- a/FlavorFiesta/package.json
+++ b/FlavorFiesta/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-webview": "^13.6.4",
-    "react-native-youtube-iframe": "^2.3.0"
+    "react-native-youtube-iframe": "^2.3.0",
+    "expo-image": "~1.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
