--- a/FlavorFiesta/package.json
+++ b/FlavorFiesta/package.json
@@ -9,12 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/html-elements": "^0.9.1",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-seoul/masonry-list": "^1.4.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.7",
     "expo": "~50.0.3",
+    "expo-image": "~1.10.5",
     "expo-status-bar": "~1.11.1",
     "init": "^0.1.2",
     "nativewind": "^2.0.11",
@@ -29,8 +31,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-webview": "^13.6.4",
-    "react-native-youtube-iframe": "^2.3.0",
-    "expo-image": "~1.10.5"
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
