--- a/FlavorFiesta/package.json
+++ b/FlavorFiesta/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.7",
+    "eas-cli": "^7.0.0",
     "expo": "~50.0.3",
     "expo-image": "~1.10.5",
     "expo-status-bar": "~1.11.1",
