--- a/FlavorFiesta/package.json
+++ b/FlavorFiesta/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "publish": "expo publish"
   },
   "dependencies": {
     "@expo/html-elements": "^0.9.1",
@@ -20,6 +21,7 @@
     "expo-cli": "^6.3.10",
     "expo-image": "~1.10.5",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "^0.24.9",
     "init": "^0.1.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
