Just a little housekeeping

--- a/FlavorFiesta/app.json
+++ b/FlavorFiesta/app.json
@@ -26,6 +26,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "656564c9-7819-42b7-acc8-bd789d628d7a"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/656564c9-7819-42b7-acc8-bd789d628d7a"
     }
   }
 }
